--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,7 @@
     "cors": "^2.8.6",
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
+    "express-rate-limit": "^8.2.1",
     "json-web-token": "^3.2.0",
     "mongoose": "^9.2.1",
     "simply-auth": "^0.1.0"
