--- a/server/package.json
+++ b/server/package.json
@@ -26,10 +26,10 @@
     "nodemon": "^3.1.11",
     "tsx": "^4.19.0",
     "typescript": "^5",
-    "typescript-eslint": "^8.33.0"
+    "typescript-eslint": "^8.33.0",
+    "@types/uuid": "^10.0.0"
   },
   "dependencies": {
-    "@types/uuid": "^10.0.0",
     "@upstash/redis": "^1.36.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.6",
