--- a/server/package.json
+++ b/server/package.json
@@ -21,13 +21,16 @@
     "@types/express": "^5.0.6",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
+    "@types/node-cron": "^3.0.11",
     "eslint": "^9",
     "nodemon": "^3.1.11",
     "tsx": "^4.19.0",
     "typescript": "^5",
-    "typescript-eslint": "^8.33.0"
+    "typescript-eslint": "^8.33.0",
+    "@types/uuid": "^10.0.0"
   },
   "dependencies": {
+    "@upstash/redis": "^1.36.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.6",
     "dotenv": "^17.3.1",
@@ -35,6 +38,8 @@
     "express-rate-limit": "^8.2.1",
     "json-web-token": "^3.2.0",
     "mongoose": "^9.2.1",
-    "simply-auth": "^0.1.0"
+    "node-cron": "^3.0.3",
+    "simply-auth": "^0.1.0",
+    "uuid": "^13.0.0"
   }
 }
