--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
     "lint-staged": "^16.2.7",
     "prettier": "^3.8.1",
     "prettier-plugin-tailwindcss": "^0.7.2"
+  },
+  "dependencies": {
+    "@upstash/redis": "^1.36.2",
+    "node-cron": "^4.2.1"
   }
 }
