--- a/data-processing/dataProcessingServer/requirements.txt
+++ b/data-processing/dataProcessingServer/requirements.txt
@@ -14,9 +14,11 @@ urllib3>=2.6.0,<3.0
 # For JSON handling (included in Python stdlib, but explicit)
 # json - stdlib
 
+# Production server
+gunicorn>=21.0.0
+
 # Optional: For async support
 # uvicorn>=0.24.0
-# gunicorn>=21.0.0
 
 # Optional: For database connections (if connecting directly to MongoDB)
 # pymongo>=4.6.0
